// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OutputField rendering renders expected elements 1`] = `
<div
  className="OutputField"
>
  <div
    className="OutputField__label"
  >
    <Label
      htmlFor="random-id"
      text="Test"
    />
  </div>
  <output
    className="OutputField__value"
    id="random-id"
  >
    This is a test
  </output>
</div>
`;

exports[`OutputField rendering renders expected elements when active is true 1`] = `
<div
  className="OutputField"
>
  <div
    className="OutputField__label"
  >
    <Label
      htmlFor="random-id"
      text="Test"
    />
  </div>
  <output
    className="OutputField__value OutputField--active"
    id="random-id"
  >
    This is a test
  </output>
</div>
`;

exports[`OutputField rendering renders expected elements when alignRight is true 1`] = `
<div
  className="OutputField OutputField--alignRight"
>
  <div
    className="OutputField__label"
  >
    <Label
      htmlFor="random-id"
      text="Test"
    />
  </div>
  <output
    className="OutputField__value"
    id="random-id"
  >
    This is a test
  </output>
</div>
`;

exports[`OutputField rendering renders expected elements when className is set 1`] = `
<div
  className="OutputField TestClass"
>
  <div
    className="OutputField__label"
  >
    <Label
      htmlFor="random-id"
      text="Test"
    />
  </div>
  <output
    className="OutputField__value"
    id="random-id"
  >
    This is a test
  </output>
</div>
`;
